# mal_sql_backup

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2020-07-01-121429_create_anime/: up.sql
migrations/2020-07-01-134042_create_manga/: down.sql  up.sql
migrations/2020-07-01-140643_create_episodes/: up.sql
migrations/2020-07-01-160843_create_chapters/: up.sql
migrations/2020-07-01-173110_create_user_stats/: down.sql  up.sql
migrations/2020-07-17-173944_user_xml_view/: down.sql  up.sql
migrations/2020-07-18-101241_create_statuses_table/: up.sql
migrations/2020-07-30-175421_anime_xml_view/: down.sql  up.sql
migrations/2020-07-30-180256_manga_xml_view/: down.sql  up.sql
migrations/2020-08-01-123551_create_anime_details/: down.sql  up.sql
migrations/2020-08-05-163023_create_manga_details/: down.sql  up.sql
src/: anime.rs  chapter.rs  detail.rs  episode.rs  lib.rs  main.rs  manga.rs  models.rs  request.rs  schema.rs  session.rs  user.rs
src/mal_backup_core/: anime.rs  chapter.rs  episode.rs  lib.rs  manga.rs  models.rs  schema.rs  session.rs  user.rs
