[package]
name = "mal_sql_backup"
version = "0.1.0"
authors = ["Max Leonhardt <m.leonhardt424@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
clap = "2.33.1"
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
reqwest = { version = "0.10.6", features = ["blocking", "cookies", "json"] }
scraper = "0.12.0"
serde = "1.0"
