[package]
name = "mal_sql_backup"
version = "0.1.0"
authors = ["Max Leonhardt <m.leonhardt424@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
clap = "2.33.1"
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["blocking", "cookies", "json"] }
scraper = "0.12.0"
serde = "1.0"
simplelog = "0.8.0"
